WebCore:

2008-10-12  Jungshik Shin  <jshin@chromium.org>

        Reviewed by Darin Adler.

        Treat x-user-defined as windows-1252 for html files with meta charset
        declaration to be compatible with Indian web sites.
        ( https://bugs.webkit.org/show_bug.cgi?id=18270 )

        Test: fast/encoding/charset-xuser-defined.html

        * loader/TextResourceDecoder.cpp:
        (WebCore::TextResourceDecoder::setEncoding):

LayoutTests:

2008-10-12  Jungshik Shin  <jshin@chromium.org>

        Reviewed by Darin Adler.

        Treat x-user-defined as windows-1252 for html files with meta charset
        declaration to be compatible with Indian web sites.
        ( https://bugs.webkit.org/show_bug.cgi?id=18270 )

        * fast/encoding/charset-xuser-defined-expected.txt: Added.
        * fast/encoding/charset-xuser-defined.html: Added.



Canonical link: https://commits.webkit.org/29774@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37530 268f45cc-cd09-0410-ab3c-d52691b4dbfc